--- a/index.html
+++ b/index.html
@@ -27,13 +27,25 @@
 					<img src="images/eating/c21.png" class="body" alt="" />
 				</div>
 				<div class="hands">
-					<div class="step-1">
+					<div id="step-1" class="step" style="display:none">
 						<img src="images/eating/c31.png"  class="left-hands" alt="" />
 						<img src="images/eating/c35.png"  class="right-hands" alt="" />
 					</div>
-					<div class="step-2" style="display:none">
-						<img src="images/eating/c31.png"  class="left-hands" alt="" />
+					<div id="step-2" class="step" style="display:none">
+						<img src="images/eating/c31.png"  class="left-hands left-hands-2" alt="" />
 						<img src="images/eating/c31.png"  class="right-hands" alt="" />
+					</div>
+					<div id="step-3" class="step" style="display:none">
+						<img src="images/eating/c33.png"  class="left-hands left-hands-2" alt="" />
+						<img src="images/eating/c31.png"  class="right-hands" alt="" />
+					</div>
+					<div id="step-4" class="step" style="display:none">
+						<img src="images/eating/c32.png"  class="left-hands left-hands-1" alt="" />
+						<img src="images/eating/c33.png"  class="right-hands right-hands-1" alt="" />
+					</div>
+					<div id="step-5" class="step" style="display:none">
+						<img src="images/eating/c35.png"  class="left-hands" alt="" />
+						<img src="images/eating/c33.png"  class="right-hands" alt="" />
 					</div>
 				</div>
 			</div>
