--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <title>吃牛肉</title>
 <script type="text/javascript" src="js/zepto.min.js"></script>
 <script type="text/javascript" src="js/eatBeef.js"></script>
+<script type="text/javascript" src="js/fx.js"></script>
 <link rel="stylesheet" href="css/common.css">
 <link rel="stylesheet" href="css/eat-beef.css">
 </head>
@@ -25,6 +26,9 @@
 				<div class="normal-part">
 					<img src="images/eating/c25.png" class="head" alt="" />
 					<img src="images/eating/c21.png" class="body" alt="" />
+					<img src="images/finished/c22.png" class="state-1" style="display:none" alt="" />
+					<img src="images/finished/c23.png" class="state-2" style="display:none" alt="" />
+					<img src="images/finished/c24.png" class="state-3" style="display:none" alt="" />
 				</div>
 				<div class="hands">
 					<div id="step-1" class="step" style="display:none">
@@ -54,6 +58,13 @@
 				<img src="images/eating/c6.png" class="steamer" alt="" />
 				<img src="images/eating/c29.png" alt="" class="start-eat"/>
 			</div>
+		</div>
+		<div class="result-box" style="display:none">
+			<div class="bg"></div>
+			<div class="share"><a href=""><img src="images/finished/c36.png" alt=""/></a></div>
+			<div class="point-hand"><img src="images/finished/c11.png" alt=""></div>
+			<div class="result-info">0个粽子不过瘾，亚信人必须得牛逼！！</div>
+			<div class="again"><a href=""><img src="images/finished/c19.png" alt=""/></a></div>
 		</div>
 	</div>
 </body>
