--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<img src="images/finished/c22.png" class="state-1" style="display:none" alt="" />
 					<img src="images/finished/c23.png" class="state-2" style="display:none" alt="" />
 					<img src="images/finished/c24.png" class="state-3" style="display:none" alt="" />
+					<img src="images/finished/c10.png" class="time-up" style="display:none" alt="" />
 				</div>
 				<div class="hands">
 					<div id="step-1" class="step" style="display:none">
@@ -55,7 +56,7 @@
 			</div>
 			<div class="desk-box">
 				<img src="images/bottom-bg.png" alt="" class="desk"/>
-				<img src="images/eating/c6.png" class="steamer" alt="" />
+				<img src="images/eating/c6.png" data-src1="images/eating/c7.png" data-src2="images/finished/c8.png" class="steamer" alt="" />
 				<img src="images/eating/c29.png" alt="" class="start-eat"/>
 			</div>
 		</div>
